tests/baselines/reference/stringIndexerConstrainsPropertyDeclarations.errors.txt
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(13,5): error TS2411: Property 'b' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(14,5): error TS2411: Property 'c' of type '() => {}' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(16,5): error TS2411: Property '"e"' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(18,5): error TS2411: Property '2.0' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(20,5): error TS2411: Property '"4.0"' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(21,5): error TS2411: Property 'f' of type 'MyString' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(23,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(26,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(28,5): error TS2411: Property 'foo' of type '() => 文字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(36,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(45,5): error TS2411: Property 'b' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(46,5): error TS2411: Property 'c' of type '() => {}' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(48,5): error TS2411: Property '"e"' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(50,5): error TS2411: Property '2.0' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(53,5): error TS2411: Property 'foo' of type '() => 文字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(55,5): error TS2411: Property '"4.0"' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(56,5): error TS2411: Property 'f' of type 'MyString' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(63,5): error TS2411: Property 'b' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(64,5): error TS2411: Property 'c' of type '() => {}' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(66,5): error TS2411: Property '"e"' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(68,5): error TS2411: Property '2.0' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(71,5): error TS2411: Property 'foo' of type '() => 文字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(73,5): error TS2411: Property '"4.0"' of type '数字' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(74,5): error TS2411: Property 'f' of type 'MyString' is not assignable to string index type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(78,5): error TS2322: Type '{ a: 文字; b: 数字; c: () => 无值; "d": 文字; "e": 数字; 1.0: 文字; 2.0: 数字; "3.0": 文字; "4.0": 数字; f: MyString; X: 文字; foo(): 文字; }' is not assignable to type '{ [x: 文字]: 文字; }'.
  Property 'b' is incompatible with index signature.
    Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(90,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts(93,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/conformance/types/objectTypeLiteral/indexSignatures/stringIndexerConstrainsPropertyDeclarations.ts (27 errors) ====
    // String indexer types constrain the types of named properties in their containing type
    
    interface MyString extends String {
        foo: number;
    }
    
    class C {
        [x: string]: string;
    
        constructor() { } // ok
    
        a: string; // ok
        b: number; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'b' of type '数字' is not assignable to string index type '文字'.
        c: () => {} // error
        ~~~~~~~~~~~
!!! error TS2411: Property 'c' of type '() => {}' is not assignable to string index type '文字'.
        "d": string; // ok
        "e": number; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property '"e"' of type '数字' is not assignable to string index type '文字'.
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property '2.0' of type '数字' is not assignable to string index type '文字'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property '"4.0"' of type '数字' is not assignable to string index type '文字'.
        f: MyString; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property 'f' of type 'MyString' is not assignable to string index type '文字'.
    
        get X() { // ok
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return '';
        }
        set X(v) { } // ok
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        foo() { // error
        ~~~
!!! error TS2411: Property 'foo' of type '() => 文字' is not assignable to string index type '文字'.
            return '';
        }
    
        static sa: number; // ok
        static sb: string; // ok
    
        static foo() { } // ok
        static get X() { // ok
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
    }
    
    interface I {
        [x: string]: string;
    
        a: string; // ok
        b: number; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'b' of type '数字' is not assignable to string index type '文字'.
        c: () => {} // error
        ~~~~~~~~~~~
!!! error TS2411: Property 'c' of type '() => {}' is not assignable to string index type '文字'.
        "d": string; // ok
        "e": number; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property '"e"' of type '数字' is not assignable to string index type '文字'.
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property '2.0' of type '数字' is not assignable to string index type '文字'.
        (): string; // ok
        (x): number // ok
        foo(): string; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property 'foo' of type '() => 文字' is not assignable to string index type '文字'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property '"4.0"' of type '数字' is not assignable to string index type '文字'.
        f: MyString; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property 'f' of type 'MyString' is not assignable to string index type '文字'.
    }
    
    var a: {
        [x: string]: string;
    
        a: string; // ok
        b: number; // error
        ~~~~~~~~~~
!!! error TS2411: Property 'b' of type '数字' is not assignable to string index type '文字'.
        c: () => {} // error
        ~~~~~~~~~~~
!!! error TS2411: Property 'c' of type '() => {}' is not assignable to string index type '文字'.
        "d": string; // ok
        "e": number; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property '"e"' of type '数字' is not assignable to string index type '文字'.
        1.0: string; // ok
        2.0: number; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property '2.0' of type '数字' is not assignable to string index type '文字'.
        (): string; // ok
        (x): number // ok
        foo(): string; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property 'foo' of type '() => 文字' is not assignable to string index type '文字'.
        "3.0": string; // ok
        "4.0": number; // error
        ~~~~~~~~~~~~~~
!!! error TS2411: Property '"4.0"' of type '数字' is not assignable to string index type '文字'.
        f: MyString; // error
        ~~~~~~~~~~~~
!!! error TS2411: Property 'f' of type 'MyString' is not assignable to string index type '文字'.
    }
    
    // error
    var b: { [x: string]: string; } = {
        ~
!!! error TS2322: Type '{ a: 文字; b: 数字; c: () => 无值; "d": 文字; "e": 数字; 1.0: 文字; 2.0: 数字; "3.0": 文字; "4.0": 数字; f: MyString; X: 文字; foo(): 文字; }' is not assignable to type '{ [x: 文字]: 文字; }'.
!!! error TS2322:   Property 'b' is incompatible with index signature.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
        a: '',
        b: 1, 
        c: () => { }, 
        "d": '', 
        "e": 1, 
        1.0: '',
        2.0: 1, 
        "3.0": '', 
        "4.0": 1, 
        f: <MyString>null, 
    
        get X() { 
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return '';
        },
        set X(v) { }, 
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        foo() { 
            return '';
        }
    }